# bmad-ecommerce

./: .env.example  .gitignore  BMAD.md  BMAD_DIAGRAM.md  BMAD_REPORT.md  BMAD_STORY.md  README.md  docker-compose.yml
_bmad-output/implementation-artifacts/: 1-1-project-scaffold-and-local-runtime.md  1-2-provision-products-table-and-seed-catalog.md  1-3-browse-catalog-with-pagination.md  (+22 more)
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  cart.py  checkout.py  health.py  products.py
backend/app/core/: config.py  errors.py  guest.py
backend/app/models/: __init__.py  cart.py  catalog.py  order.py  product.py
backend/app/repositories/: __init__.py  carts.py  dynamodb.py  orders.py  products.py
backend/app/services/: __init__.py  cart.py  catalog.py  checkout.py
backend/scripts/: provision.py  seed.py
backend/tests/: test_cart_api.py  test_carts_repository.py  test_checkout_api.py  test_config.py  test_health.py  test_orders_repository.py  test_products_api.py  test_products_category.py  test_products_detail.py  test_products_listing.py  test_products_repository.py  test_products_search.py  test_products_sort.py  test_seed.py
docs/: api-contracts-backend.md  architecture-backend.md  architecture-frontend.md  data-models-backend.md  deployment-guide.md  development-guide.md  diagrams.md  index.md  integration-architecture.md  project-overview.md  project-parts.json  project-scan-report.json  source-tree-analysis.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
(+47 files in other folders)
