[project]
name = "bmad-ecommerce-api"
version = "0.1.0"
description = "Anonymous e-commerce storefront API (FastAPI + DynamoDB)"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.139.*",
    "uvicorn[standard]>=0.34",
    "boto3>=1.35",
    "pydantic>=2",
    "pydantic-settings>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
